feat!: store form entries as sub pages
Storing the entries inside the form page was causing a lot of issues

--- a/translations/de.yml
+++ b/translations/de.yml
@@ -6,6 +6,11 @@ arnoson.kirby-forms.fields: Felder
 arnoson.kirby-forms.message: Nachricht
 arnoson.kirby-forms.page: Seite
 arnoson.kirby-forms.enabled: Aktiviert
+arnoson.kirby-forms.submitted: Eingereicht
+arnoson.kirby-forms.entries: Einträge
+arnoson.kirby-forms.settings: Einstellungen
+arnoson.kirby-forms.export: Exportieren
+arnoson.kirby-forms.create-from-label: Aus Beschriftung generieren
 
 arnoson.kirby-forms.success-type: Zeige
 arnoson.kirby-forms.submit-button-label: Button Beschriftung
