--- a/translations/de.yml
+++ b/translations/de.yml
@@ -1,5 +1,5 @@
 arnoson.kirby-forms.submit: Absenden
-arnoson.kirby-forms.success: Erflog
+arnoson.kirby-forms.success: Erfolg
 arnoson.kirby-forms.error: Fehler
 arnoson.kirby-forms.error-message: Fehlermeldung
 arnoson.kirby-forms.fields: Felder
