--- a/translations/en.yml
+++ b/translations/en.yml
@@ -65,3 +65,4 @@ arnoson.kirby-forms.invalid-url-error: Please enter a valid URL
 arnoson.kirby-forms.no-entries: No entries yet
 arnoson.kirby-forms.save-error: An error occurred while saving the form data
 arnoson.kirby-forms.reserved-identifier: The name cannot be 'website' as this field is used for spam protection. Please use a different name like 'website_url' instead.
+arnoson.kirby-forms.no-comma-in-value: The value cannot contain a comma.
