--- a/translations/de.yml
+++ b/translations/de.yml
@@ -27,7 +27,7 @@ arnoson.kirby-forms.contact: Contact
 arnoson.kirby-forms.date-and-time: Datum & Uhrzeit
 arnoson.kirby-forms.other: Sonstige
 arnoson.kirby-forms.form: Formular
-arnoson.kirby-forms.forms: Formulieren
+arnoson.kirby-forms.forms: Formulare
 
 arnoson.kirby-forms.success-type: Zeige
 arnoson.kirby-forms.submit-button-label: Button Beschriftung
