--- a/translations/nl.yml
+++ b/translations/nl.yml
@@ -27,7 +27,7 @@ arnoson.kirby-forms.contact: Contact
 arnoson.kirby-forms.date-and-time: Datum & Tijd
 arnoson.kirby-forms.other: Ander
 arnoson.kirby-forms.form: Formulier
-arnoson.kirby-forms.forms: Formulier
+arnoson.kirby-forms.forms: Formulare
 
 arnoson.kirby-forms.success-type: Weergeven
 arnoson.kirby-forms.submit-button-label: Knoplabel
