feat: add single checkbox field
closes #23

--- a/translations/de.yml
+++ b/translations/de.yml
@@ -39,6 +39,7 @@ arnoson.kirby-forms.email-to: Empfänger
 arnoson.kirby-forms.email-subject: Betreff
 arnoson.kirby-forms.email-content: Inhalt
 
+arnoson.kirby-forms.checkbox: Checkbox
 arnoson.kirby-forms.checkboxes: Checkboxen
 arnoson.kirby-forms.date: Datum
 arnoson.kirby-forms.email: Email
