--- a/translations/nl.yml
+++ b/translations/nl.yml
@@ -39,6 +39,7 @@ arnoson.kirby-forms.email-to: Naar
 arnoson.kirby-forms.email-subject: Onderwerp
 arnoson.kirby-forms.email-content: Inhoud
 
+arnoson.kirby-forms.checkbox: Checkbox
 arnoson.kirby-forms.checkboxes: Checkboxen
 arnoson.kirby-forms.date: Datum
 arnoson.kirby-forms.email: E-mail
