--- a/translations/en.yml
+++ b/translations/en.yml
@@ -39,6 +39,7 @@ arnoson.kirby-forms.email-to: To
 arnoson.kirby-forms.email-subject: Subject
 arnoson.kirby-forms.email-content: Content
 
+arnoson.kirby-forms.checkbox: Checkbox
 arnoson.kirby-forms.checkboxes: Checkboxes
 arnoson.kirby-forms.date: Date
 arnoson.kirby-forms.email: Email
