--- a/translations/pt_PT.yml
+++ b/translations/pt_PT.yml
@@ -10,22 +10,29 @@ arnoson.kirby-forms.submitted: Submetido
 arnoson.kirby-forms.entries: Entradas
 arnoson.kirby-forms.settings: Configurações
 arnoson.kirby-forms.export: Exportar
-arnoson.kirby-forms.create-from-label: Criar a partir da label
+arnoson.kirby-forms.create-from-label: Criar a Partir da Label
 arnoson.kirby-forms.label: Label
 arnoson.kirby-forms.field-name: Nome do Campo
 arnoson.kirby-forms.field-identifier: Nome
 arnoson.kirby-forms.field-identifier-placeholder: nome_campo
 arnoson.kirby-forms.required: Obrigatório
 arnoson.kirby-forms.default: Valor por Defeito
+arnoson-kirby-forms.default-select-placeholder: valor
+arnoson-kirby-forms.default-radio-placeholder: valor
+arnoson-kirby-forms.default-checkboxes-placeholder: valor1, valor2
 arnoson.kirby-forms.max-length: Tamanho Máximo
 arnoson.kirby-forms.min-length: Tamanho Mínimo
 arnoson.kirby-forms.max-value: Valor Máximo
 arnoson.kirby-forms.min-value: Valor Mínimo
 arnoson.kirby-forms.pattern: Padrão
 arnoson.kirby-forms.placeholder: Placeholder
+arnoson.kirby-forms.options: Opções
+arnoson.kirby-forms.empty: Permitir Vazio
+arnoson.kirby-forms.value: Valor
+arnoson.kirby-forms.basic: Básicos
 arnoson.kirby-forms.contact: Contacto
 arnoson.kirby-forms.date-and-time: Data & Hora
-arnoson.kirby-forms.other: Outro
+arnoson.kirby-forms.other: Outros
 arnoson.kirby-forms.form: Formulário
 arnoson.kirby-forms.forms: Formulários
 
@@ -37,9 +44,13 @@ arnoson.kirby-forms.notification-email: Email de Notificação
 arnoson.kirby-forms.email-from: De
 arnoson.kirby-forms.email-to: Para
 arnoson.kirby-forms.email-subject: Assunto
+arnoson.kirby-forms.email-subject-placeholder: Obrigado pelo seu registo!
 arnoson.kirby-forms.email-content: Conteúdo
+arnoson.kirby-forms.email-content-text: Texto
+arnoson.kirby-forms.email-content-template: Template
 arnoson.kirby-forms.brevo-update: Atualizar Contactos Existentes
 arnoson.kirby-forms.brevo-list-id: Lista
+arnoson.kirby-forms.brevo-opt-in: Duplo Opt-in
 arnoson.kirby-forms.brevo-redirection-url: Página de Confirmação
 arnoson.kirby-forms.brevo-template-id: Template de Duplo Opt-in
 arnoson.kirby-forms.save: Guardar
@@ -71,8 +82,12 @@ arnoson.kirby-forms.invalid-url-error: Por favor, insira um URL válido
 arnoson.kirby-forms.duplicate-name-error: Um campo com o nome "{name}" já existe
 
 arnoson.kirby-forms.no-entries: Nenhuma entrada ainda
+arnoson.kirby-forms.no-emails: Nenhum endereço de email encontrado
+arnoson.kirby-forms.no-fields: Nenhum campo ainda
+arnoson.kirby-forms.form-not-found: Não foi possível encontrar o formulário "{name}"
+arnoson.kirby-forms.form-entry-not-found: Não foi possível encontrar a entrada de formulário "{name}"
 arnoson.kirby-forms.save-error: Ocorreu um erro ao tentar gravar os dados do formulário
 arnoson.kirby-forms.reserved-identifier: O nome 'website' não pode ser utilizado porque este campo serve para proteger contra spam. Por favor, utilize um nome diferente como 'website_url' em alternativa.
-arnoson.kirby-forms.no-comma-in-value: O valor não pode contar uma vírgula.
-arnoson.kirby-forms.empty-notification-body: Deixe este campo vazio para enviar todos os dados do formulário.
+arnoson.kirby-forms.no-comma-in-value: O valor não pode contar uma vírgula
+arnoson.kirby-forms.empty-notification-body: Deixe este campo vazio para que sejam enviados todos os dados do formulário
 arnoson.kirby-forms.brevo-error: Não foi possível enviar os dados para a Brevo
