--- a/translations/pt_PT.yml
+++ b/translations/pt_PT.yml
@@ -24,6 +24,7 @@ arnoson.kirby-forms.max-length: Tamanho Máximo
 arnoson.kirby-forms.min-length: Tamanho Mínimo
 arnoson.kirby-forms.max-value: Valor Máximo
 arnoson.kirby-forms.min-value: Valor Mínimo
+arnoson.kirby-forms.step: Passo
 arnoson.kirby-forms.pattern: Padrão
 arnoson.kirby-forms.placeholder: Placeholder
 arnoson.kirby-forms.options: Opções
